cambios que no entendí por qué le di add otra vez

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
-<!--Probando iniciar un GIT, pasarlo a stage y darle commit-->
+<!--Probando iniciar un repositorio GIT, pasarlo a stage y darle commit-->
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Licitaciones Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
-    
+    <h1>La web que la comisión siempre necesitó pero nunca supo tener</h1>
 </body>
 </html>
