--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Licitaciones Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
-    <h1>La web que la comisión siempre necesitó pero nunca supo tener</h1>
+    <div class="headers"><h1>La web que la comisión siempre necesitó pero nunca supo tener</h1></div>
 </body>
 </html>
