entendí por qué el add, agregué futuros links

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 </head>
 <body>
     <div class="headers"><h1>La web que la comisión siempre necesitó pero nunca supo tener</h1></div>
+    <div id="link-licitaciones"><a>Licitaciones</a></div>
+    <div id="link-contacto"><a>Contacto</a></div>
 </body>
 </html>
