practicando html con inline css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html lang="es">
 
 <!--Probando iniciar un repositorio GIT, pasarlo a stage y darle commit-->
+<style>
 
+    .headers {
+        background-color: #16a9bd;
+        font-size: 17px;
+        color: #000000;
+        margin: 30px;
+        padding: 10px 20px 10px 20px;
+        text-align: center;
+        font-style: italic;
+    }
+
+    .footer {
+        background-color: #16a9bd;
+        margin: 30px;
+        padding: 10px 20px 10px 20px;
+        font-size: 10px;
+    }
+
+</style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +29,9 @@
     <title>Licitaciones Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
-    <div class="headers"><h1>La web que la comisión siempre necesitó pero nunca supo tener</h1></div>
+    <div class="headers"><h1>COMISIÓN DE OBRAS RES. 1/2003</h1></div>
     <div id="link-licitaciones"><a>Licitaciones</a></div>
     <div id="link-contacto"><a>Contacto</a></div>
 </body>
+<footer><div class="footer"><p>Última actualización: 13/5/2022</p></div></footer>
 </html>
