reorganización de id's y clases. href a los links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--Probando iniciar un repositorio GIT, pasarlo a stage y darle commit-->
 <style>
 
-    .headers {
+    #header {
         background-color: #16a9bd;
         font-size: 17px;
         color: #000000;
@@ -14,11 +14,16 @@
         font-style: italic;
     }
 
-    .footer {
+    #footer {
         background-color: #16a9bd;
         margin: 30px;
         padding: 10px 20px 10px 20px;
         font-size: 10px;
+    }
+
+    .links {
+        margin: 30px;
+        padding: 5Spx 5px 5px 5px;
     }
 
 </style>
@@ -29,9 +34,10 @@
     <title>Licitaciones Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
-    <div class="headers"><h1>COMISIÓN DE OBRAS RES. 1/2003</h1></div>
-    <div id="link-licitaciones"><a>Licitaciones</a></div>
-    <div id="link-contacto"><a>Contacto</a></div>
+    <div id="header"><h1>COMISIÓN DE OBRAS RES. 1/2003</h1></div>
+    <div class="links"><a href="">Licitaciones</a></div>
+    <div class="links"><a href="">Contacto</a></div>
+
 </body>
-<footer><div class="footer"><p>Última actualización: 13/5/2022</p></div></footer>
+<footer><div id="footer"><p>Última actualización: <strong>13/5/1998</p></div></footer>
 </html>
