--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Licitaciones Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
     <div id="header"><h1>COMISIÓN DE OBRAS RES. 1/2003</h1></div>
-    <div class="links"><a href="">Licitaciones</a></div>
+    <div class="links"><a href="licitaciones.html">Licitaciones</a></div>
     <div class="links"><a href="">Contacto</a></div>
 
 </body>
