modificaciones en el diseño

--- a/index.html
+++ b/index.html
@@ -1,32 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<!--Probando iniciar un repositorio GIT, pasarlo a stage y darle commit-->
-<style>
-
-    #header {
-        background-color: #16a9bd;
-        font-size: 17px;
-        color: #000000;
-        margin: 30px;
-        padding: 10px 20px 10px 20px;
-        text-align: center;
-        font-style: italic;
-    }
-
-    #footer {
-        background-color: #16a9bd;
-        margin: 30px;
-        padding: 10px 20px 10px 20px;
-        font-size: 10px;
-    }
-
-    .links {
-        margin: 30px;
-        padding: 5Spx 5px 5px 5px;
-    }
-
-</style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,8 +9,11 @@
 </head>
 <body>
     <div id="header"><h1>COMISIÓN DE OBRAS RES. 1/2003</h1></div>
-    <div class="links"><a href="licitaciones.html">Licitaciones</a></div>
-    <div class="links"><a href="">Contacto</a></div>
+    <div class="links"><a href="./licitaciones.html">Licitaciones</a></div>
+<main>
+    <!--podría poner algún artículo respecto al avance de una obra actualziaciones
+    del proceso licitatirio.-->
+</main>    
 
 </body>
 <footer><div id="footer"><p>Última actualización: <strong>13/5/1998</p></div></footer>
