--- a/licitaciones.html
+++ b/licitaciones.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Licitaciones en curso</title>
 </head>
 <body>
-    <p>Aquí deberá estar la tabla con las licitaciones</p>
+    
+    <div id="header"><h1></h1></div>
+    <div class="tabla">
+    <table>
+        <thead>
+            <th>Número de obra</th>
+            <th>Nombre</th>
+            <th>Archivos</th>
+        </thead>
+        
+        <tbody>
+
+            </tr>
+        </tbody>
+
+        <tfoot>
+
+        </tfoot>
+    </table>
+    </div>
+
+    <div class="links"><a href="./index.html">Volver</a></div>
+<footer><div id="footer"><p>Última actualización: <strong>13/5/1998</p></div></footer>
 </body>
 </html>
