--- a/licitaciones.html
+++ b/licitaciones.html
@@ -10,8 +10,8 @@
 <body>
     
     <div id="header"><h1></h1></div>
-    <div class="tabla">
-    <table>
+    <div >
+    <table class="tabla">
         <thead>
             <th>Número de obra</th>
             <th>Nombre</th>
