--- a/licitaciones.html
+++ b/licitaciones.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div id="header"><h1></h1></div>
+    <div id="header"><h1>prueba</h1></div>
     <div >
     <table class="tabla">
         <thead>
