No había salvado el archivo

--- a/index.html
+++ b/index.html
@@ -18,3 +18,14 @@
 </body>
 <footer><div id="footer"><p>Última actualización: <strong>13/5/1998</p></div></footer>
 </html>
+
+
+
+<!--
+
+    id's y clases: ver cómo aplicar para el caso de la tabla, si es en general para todas las
+    celdas o si cada th/tr tiene su propia clase.
+
+    
+
+-->
