--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <div id="header"><h1>COMISIÓN DE OBRAS RES. 1/2003</h1></div>
-    <div class="links"><a href="./licitaciones.html">Licitaciones</a></div>
-<main>
-    <!--podría poner algún artículo respecto al avance de una obra actualziaciones
-    del proceso licitatirio.-->
-</main>    
+    <main id="main">
+        <h1>Últimas actualizaciones:</h1>
+        <p>Se actualizó la documentación inherente a la LP n.° XXXXX.</p>
+    </main> 
+    
+    <nav>
+        <div class="links"><a href="./licitaciones.html">Licitaciones</a></div>
+    </nav>
+   
 
 </body>
-<footer><div id="footer"><p>Última actualización: <strong>13/5/1998</p></div></footer>
+<footer><div id="footer"><p><strong>13/5/1998</p></div></footer>
 </html>
 
 
