--- a/licitaciones.html
+++ b/licitaciones.html
@@ -10,26 +10,8 @@
 <body>
     
     <div id="header"><h1>prueba</h1></div>
-    <div >
-    <table class="tabla">
-        <thead>
-            <th>Número de obra</th>
-            <th>Nombre</th>
-            <th>Archivos</th>
-        </thead>
-        
-        <tbody>
-
-            </tr>
-        </tbody>
-
-        <tfoot>
-
-        </tfoot>
-    </table>
-    </div>
 
     <div class="links"><a href="./index.html">Volver</a></div>
-<footer><div id="footer"><p>Última actualización: <strong>13/5/1998</p></div></footer>
+<footer><div id="footer"><p><strong>13/5/1998</p></div></footer>
 </body>
 </html>
