más correcciones de diseño con los avances de FCC

--- a/index.html
+++ b/index.html
@@ -9,17 +9,32 @@
     <title>Licitaciones Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
-    <div id="header"><h1>COMISIÓN DE OBRAS RES. 1/2003</h1></div>
+    <header id="header">COMISIÓN DE OBRAS RES. 1/2003</header>
     <main id="main">
-        <h1>Últimas actualizaciones:</h1>
-        <p>Se actualizó la documentación inherente a la LP n.° XXXXX.</p>
+        <article>
+            <h1>Información interesante</h1>
+            <p>Información interesante inherente a los avances de las obras en curso. 
+                <br>Difícilmente se encuentre un sitio con tanta información como este.
+                <br>Información directa desde la fuente.
+            </p>
+        </article>
+        <hr>
+        <article>
+            <h2>LP n.° XXXXX</h2>
+            <p>Se cargó la circular n.° 2.</p>
+        </article>
     </main> 
     
+    <hr>
     <nav>
         <div class="links"><a href="./licitaciones.html">Licitaciones</a></div>
+        
     </nav>
+    <hr>
    
 
 </body>
-<footer><div id="footer"><p><strong>13/5/1998</p></div></footer>
+<footer><div id="footer"><p><strong>&copy; Rigoberto uep disain - 1998</p></div></footer>
 </html>
+
+<!--https://www.htmlquick.com/es/tutorials/tables.html-->
