más correcciones en etiquetas

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Licitaciones Comisión de Obras Res. 1/2003</title>
+    <title>Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
-    <header id="header">COMISIÓN DE OBRAS RES. 1/2003</header>
+    <header id="headers">COMISIÓN DE OBRAS RES. 1/2003</header>
     <main id="main">
         <article>
             <h1>Información interesante</h1>
@@ -24,17 +24,15 @@
             <p>Se cargó la circular n.° 2.</p>
         </article>
     </main> 
-    
     <hr>
     <nav>
-        <div class="links"><a href="./licitaciones.html">Licitaciones</a></div>
-        
+        <nav class="links"><a href="./licitaciones.html">Licitaciones</a></nav>   
     </nav>
     <hr>
-   
-
 </body>
-<footer><div id="footer"><p><strong>&copy; Rigoberto uep disain - 1998</p></div></footer>
+<footer id="footer">
+    <p id="footer-izq"><strong>&copy; Rigoberto uep disain - 1998</p>
+</footer>
 </html>
 
 <!--https://www.htmlquick.com/es/tutorials/tables.html-->
