--- a/licitaciones.html
+++ b/licitaciones.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     
-    <div id="header"><h1>prueba</h1></div>
+    <header id="headers">prueba</header>
+    <main id="main">
+        <h1>Licitaciones en curso</h1>
+    </main id="main">
 
-    <div class="links"><a href="./index.html">Volver</a></div>
-<footer><div id="footer"><p><strong>13/5/1998</p></div></footer>
+    <nav class="links"><a href="./index.html">Volver</a></nav>
+    <footer id="footer">
+        <p id="footer-izq"><strong>&copy; Rigoberto uep disain - 1998</p>
+    </footer>
 </body>
 </html>
