corrección de links

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <article>
             <h1>Información interesante</h1>
             <p>Información interesante inherente a los avances de las obras en curso. 
-                <br>Difícilmente se encuentre un sitio con tanta información como este.
-                <br>Información directa desde la fuente.
+            <br>Difícilmente se encuentre un sitio con tanta información como este.
+            <br>Información directa desde la fuente.
             </p>
         </article>
         <hr>
         <article>
             <h2>LP n.° XXXXX</h2>
-            <p>Se cargó la circular n.° 2.</p>
+            <p>Párrafo sobre la circular n.° 2.</p>
         </article>
     </main> 
     <hr>
