--- a/licitaciones.html
+++ b/licitaciones.html
@@ -12,6 +12,18 @@
     <header id="headers">prueba</header>
     <main id="main">
         <h1>Licitaciones en curso</h1>
+        <table>
+            <thead>
+                <th>Nombre</th>
+                <th>Número</th>
+                <th>Documentación</th>
+            </thead>
+            <tr>
+                <td>Transformador Colonia Vergara</td>
+                <td>LP n.° 99.999</td>
+                <td><a href="http://energia-comision1.gov.ar" target="_blank">Ir</a></td>
+            </tr>
+        </table>
     </main id="main">
 
     <nav class="links"><a href="./index.html">Volver</a></nav>
