--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <header id="headers">COMISIÓN DE OBRAS RES. 1/2003</header>
+    <hr>
+    <nav>
+        <nav class="links"><a href="./licitaciones.html">Ir a Licitaciones</a></nav>   
+    </nav>
     <main id="main">
         <article>
             <h1>Información interesante</h1>
@@ -24,10 +28,7 @@
             <p>Párrafo sobre la circular n.° 2.</p>
         </article>
     </main> 
-    <hr>
-    <nav>
-        <nav class="links"><a href="./licitaciones.html">Licitaciones</a></nav>   
-    </nav>
+
     <hr>
 </body>
 <footer id="footer">
