--- a/licitaciones.html
+++ b/licitaciones.html
@@ -21,7 +21,7 @@
             <tr>
                 <td>Transformador Colonia Vergara</td>
                 <td>LP n.° 99.999</td>
-                <td><a href="http://energia-comision1.gov.ar" target="_blank">Ir</a></td>
+                <td><a href="http://energia-comision1.gov.ar" target="_blank">Ver documentación</a></td>
             </tr>
         </table>
     </main id="main">
