correcciones en etiquets y atributos

--- a/licitaciones.html
+++ b/licitaciones.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     
-    <header id="headers">prueba</header>
+    <header>
+        <h1 id="headers">
+            Prueba
+        </h1>
+    </header>
     <main id="main">
         <h1>Licitaciones en curso</h1>
         <table>
@@ -21,7 +25,11 @@
             <tr>
                 <td>Transformador Colonia Vergara</td>
                 <td>LP n.° 99.999</td>
-                <td><a href="http://energia-comision1.gov.ar" target="_blank">Ver documentación</a></td>
+                <td>
+                    <a href="http://energia-comision1.gov.ar" target="_blank">
+                    Ver documentación
+                    </a>
+                </td>
             </tr>
         </table>
     </main id="main">
