--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<head>
     <link rel="stylesheet" href="styles.css">
     <title>Comisión de Obras Res. 1/2003</title>
 </head>
 <body>
-    <header id="headers">COMISIÓN DE OBRAS RES. 1/2003</header>
-    <hr>
-    <nav>
-        <nav class="links"><a href="./licitaciones.html">Ir a Licitaciones</a></nav>   
-    </nav>
+    <header>
+        <h1 id="headers">
+            COMISIÓN DE OBRAS RES. 1/2003
+        </h1>
+        <hr>
+        <nav>
+            <nav class="links"><a href="./licitaciones.html">Ir a 
+                Licitaciones en curso</a></nav>   
+        </nav>
+    </header>
+
     <main id="main">
         <article>
             <h1>Información interesante</h1>
-            <p>Información interesante inherente a los avances de las obras en curso. 
-            <br>Difícilmente se encuentre un sitio con tanta información como este.
+            <p>Información interesante inherente a los avances de las obras en 
+                curso. 
+            <br>Difícilmente se encuentre un sitio con tanta información como 
+            este.
             <br>Información directa desde la fuente.
             </p>
         </article>
