Mejora en las fuentes y los espacios

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Anton|Baskervville|Raleway&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <title>App Licitaciones</title>
 </head>
 
 <body>
     <nav id="navbar">
-        <header>Documentación</i></header>
+        <header id="nav-header">Documentación</i></header>
         <ul>
             <li><a class="nav-link" href="#com1">Comisión de Obras</a></li>
             <li>
@@ -26,6 +29,9 @@
 
             <li>
                 <a class="nav-link" href="#licitaciones">Licitaciones</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#contacto">Contacto</a>
             </li>
     </nav>
     <main id="main-doc">
@@ -75,9 +81,13 @@
                     Como órgano ejecutor, la Comisión realiza las gestiones de adquisición de materiales y equipos
                     mayores
                     como así también servicios de estudios, ingeniería, construcción y montaje a ser suscriptos por la
-                    COMPAÑIA ADMINISTRADORA DEL MERCADO MAYORISTA ELECTRICO SOCIEDAD ANÓNIMA (CAMMESA), por cuenta y
-                    orden
-                    del ESTADO NACIONAL, y las tareas de inspección y certificación de los contratos.
+                    COMPAÑIA ADMINISTRADORA DEL MERCADO MAYORISTA ELECTRICO SOCIEDAD ANÓNIMA 
+                    (<a 
+                    href="https://cammesaweb.cammesa.com/"
+                    target="_blank"
+                    >CAMMESA                   
+                    </a>), por cuenta y orden del ESTADO NACIONAL, y 
+                    las tareas de inspección y certificación de los contratos.
                 </p>
 
             </article>
@@ -296,79 +306,28 @@
             </header>
             <article>
                 <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-                <p>Lorena ipsum</p>
-
-
             </article>
+        </section>
+        <section class="main-section" id="contacto">
+            <header>
+                <h2>Contacto</h2>
+            </header>
+            <article>
+                <p>Comisión de Obras Res. N.º 1/2003</p>
+                <p>Fideicomiso Obras Transporte para Abastecimiento Eléctrico (FOTAE)</p>
+                <p>Tel: +54 11 4319-3746</p>
+                <p>
+                    Av. Eduardo Madero 942, 16.º, dcha.<br>
+                    (C1106ACW) Ciudad Autónoma de Buenos Aires<br>
+                    Argentina
+                </p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3029820926163!2d-58.3704812!3d-34.5964993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33535243d9557%3A0xa2903aff993ac8dc!2sAv.%20Eduardo%20Madero%20942%2C%20C1106%20CABA!5e0!3m2!1ses!2sar!4v1656085119722!5m2!1ses!2sar"
+                    width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            
+            </article>
+        </section>
     </main>
 </body>
-
 </html>
