--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
         <ul>
             <li><a class="nav-link" href="#com1">Comisión de Obras</a></li>
             <li>
-                <a class="nav-link" href="#operatoria-res1">Operatoria Res. N.º 1/2003</a>
+                <a class="nav-link" href="#operatoria-res1">Operatoria Res. S.E. N.º 1/2003</a>
             </li>
             <li>
-                <a class="nav-link" href="#operatoria-res821">Operatoria Res. N.º 8/2006<a>
+                <a class="nav-link" href="#obras-adecuacion">
+                    <span class="link-span">Obras de adecuacion</span>
+                </a>
+            </li>
+            <li>
+                <a class="nav-link" href="#obras-abastecimieto">
+                    <span class="link-span">Obras de seguridad de abastecimiento</span>
+                </a>
+            </li>
+            <li>
+                <a class="nav-link" href="#obras-demanda">
+                    <span class="link-span">Obras por Requerimiento de Demanda</span>
+                </a>
+            </li>
+            <li>
+                <a class="nav-link" href="#operatoria-res821">Operatoria Res. S.E. N.º 8/2006<a>
             </li>
 
             <li><a class="nav-link" href="#financiacion-y-pago">Financiación y pago</a></li>
@@ -37,10 +52,10 @@
     <main id="main-doc">
         <section class="main-section" id="com1">
             <header>
-                <h2>Comisión de Obras Res. N.º 1/2003</h2>
+                <h2>Comisión de Obras Res. S.E. N.º 1/2003</h2>
             </header>
             <article>
-                <p>La Comisión de Obras Resolución N.º 1/2003, creada por Resolución S.E. N.º 86 del 30 de enero de
+                <p>La Comisión de Obras Resolución S.E. N.º 1/2003, creada por Resolución S.E. N.º 86 del 30 de enero de
                     2003,
                     es
                     un órgano asesor y ejecutor constituido en el ámbito de la Secretaría de Energía y presidido por el
@@ -55,7 +70,7 @@
                             y
                             económica, y la prioridad de las Ampliaciones sometidas a su consideración en los términos
                             de la
-                            Resolución SE N.º 1/2003 y resoluciones concordantes y complementarias.
+                            Resolución S.E. N.º 1/2003 y resoluciones concordantes y complementarias.
                         </p>
                     </li>
                     <li>
@@ -85,29 +100,29 @@
                     (<a 
                     href="https://cammesaweb.cammesa.com/"
                     target="_blank"
-                    >CAMMESA                   
-                    </a>), por cuenta y orden del ESTADO NACIONAL, y 
+                    >CAMMESA</a>), por cuenta y orden del ESTADO NACIONAL, y 
                     las tareas de inspección y certificación de los contratos.
                 </p>
 
             </article>
         </section>
+        <hr>
         <section class="main-section" id="operatoria-res1">
             <header>
                 <h2>Operatoria Resolución S.E. N.º 1/2003</h2>
             </header>
             <article>
-                <p>La Secretaría de Energía impulsó mediante la Resolución SE N.º 1/2003, un procedimiento para
+                <p>La Secretaría de Energía impulsó mediante la Resolución S.E. N.º 1/2003, un procedimiento para
                     identificar y habilitar la realización de inversiones en el sector, promoviendo de una manera activa
                     las ampliaciones que los Sistemas de Transporte requieren a los fines de preservar la calidad y la
                     provisión del servicio.</p>
 
                 <p>
-                    Las obras que se habilitan mediante la operatoria Resolución SE N.º 1/2003 y sus modificatorias y
+                    Las obras que se habilitan mediante la operatoria Resolución S.E. N.º 1/2003 y sus modificatorias y
                     complementarias obedecen a dos necesidades, y se caracterizan como Obras de Adecuación y Obras de
                     Seguridad de Abastecimiento:
                 </p>
-                <h4>Obras de Adecuación:</h4>
+                <h4 class="obras-habilitadas" id="obras-adecuacion">Obras de Adecuación:</h4>
                 <p>Las Obras de Adecuación apuntan a adecuar las instalaciones a los criterios y normas del “Reglamento
                     de Diseño y Calidad” de los Sistemas de Transporte, y presentan los siguientes beneficios:
                 </p>
@@ -136,7 +151,7 @@
                         Evitar el apagón total de algunas zonas ante fallas en equipos pertenecientes a estas redes.
                     </li>
                 </ul>
-                <h4>Obras de Seguridad de Abastecimiento:</h4>
+                <h4 class="obras-habilitadas" id="obras-abastecimieto">Obras de Seguridad de Abastecimiento:</h4>
                 <p>
                     Las Obras de Seguridad de Abastecimiento minimizan las posibilidades de desabastecimiento prolongado
                     en zonas especificas, permitiendo evitar, ante fallas eléctricas importantes, largos períodos (de
@@ -145,11 +160,11 @@
                     suministrada (ENS) durante un plazo de 10 dias.
                 </p>
                 <p>
-                    A partir del dictado de la Resolución SE N.º 821/2006 se ha incorporado dentro de la operatoria las
+                    A partir del dictado de la Resolución S.E. N.º 821/2006 se ha incorporado dentro de la operatoria las
                     obras
                     que obedecen a la caracterización de Obras de Adecuación de Requerimiento de Demanda.
                 </p>
-                <h4 id="obras-por-req-demanda">Obras por Requerimiento de Demanda:</h4>
+                <h4 class="obras-habilitadas" id="obras-demanda">Obras por Requerimiento de Demanda:</h4>
                 <p>
                     Las Obras de Adecuación por Requerimiento de Demanda son las obras que apuntan a dotar de las
                     instalaciones necesarias y suficientes para atender el crecimiento vegetativo de la demanda.
@@ -163,15 +178,15 @@
                 </p>
             </article>
         </section>
-
+        <hr>
         <section class="main-section" id="operatoria-res821">
             <header>
                 <h2>Operatoria Res. N.º 8/2006</h2>
             </header>
             <article>
                 <p>
-                    El dictado de la Resolución SE N.º 821/2006 introduce una nueva caracterización de obras a ser
-                    habilitadas mediante la metodología desarrollada en la Resolución SE N.º 1/2003 y sus
+                    El dictado de la Resolución S.E. N.º 821/2006 introduce una nueva caracterización de obras a ser
+                    habilitadas mediante la metodología desarrollada en la Resolución S.E. N.º 1/2003 y sus
                     modificatorias,
                     constituída por las
                     <a href="#obras-por-req-demanda">Obras de Adecuación de Requerimiento de Demanda</a>.
@@ -233,13 +248,14 @@
                     de
                     fondos.</p>
                 <p>Una vez habilitada, será de aplicación la metodología desarrollada a través del ejercicio de la
-                    Resolución SE N.º 1/2003 y sus modificatorias y complementarias.</p>
+                    Resolución S.E. N.º 1/2003 y sus modificatorias y complementarias.</p>
                 <p>La Comisión de Obras tendrá a su cargo la supervisión general del proyecto, determinando la
                     metodología de contratación más conveniente de acuerdo a las características de la obra en
                     cuestión,
                     y la situación vigente al momento de su realización.</p>
             </article>
         </section>
+        <hr>
         <section class="main-section" id="financiacion-y-pago">
             <header>
                 <h2>Financiación y pago</h2>
@@ -257,7 +273,7 @@
                     Otras fuentes de financiamiento las constituyen aportes vinculados a las demandas específicas que se
                     atienden con las obras, sean estos provenientes de gobiernos provinciales, o a partir de cargos
                     específicos a incluir o incluidos en la tarifa del servicio eléctrico.
-                    Con esos recursos se constituye el “FONDO OBRAS RESOLUCION SE N.º 1/2003” con que se financia la
+                    Con esos recursos se constituye el “FONDO OBRAS RESOLUCION S.E. N.º 1/2003” con que se financia la
                     ejecución de las obras, teniendo cada obra una subcuenta específica.
                     Una vez terminadas las obras, los saldos no pagados como anticipo desde fondos especificos no
                     reembolsables a tales fines, se amortizan en cuotas mensuales, destinadas a restituir los recursos
@@ -300,6 +316,7 @@
                 </p>
             </article>
         </section>
+        <hr>
         <section class="main-section" id="licitaciones">
             <header>
                 <h2>Licitaciones</h2>
@@ -308,6 +325,7 @@
                 <p>Lorena ipsum</p>
             </article>
         </section>
+        <hr>
         <section class="main-section" id="contacto">
             <header>
                 <h2>Contacto</h2>
