Reorganización de la información a fin de darle más fluidez a la lectura y descomprimir el index

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 </head>
 
 <body>
+  <!--
+  Barra de navegación. 
+  Hacer que ocupe todo el lado izquierdo.
+  media-query: Que aparezca arriba.
+-->
   <nav id="navbar">
-    <header id="nav-header">Documentación</i></header>
+    <header id="documentacion-header" class="nav-header">Documentación</header>
     <ul>
       <li><a class="nav-link" href="#com1">Comisión de Obras</a></li>
       <li>
@@ -39,21 +44,36 @@
       <li>
         <a class="nav-link" href="#operatoria-res821">Operatoria Res. S.E. N.º 8/2006<a>
       </li>
-
-      <li><a class="nav-link" href="#financiacion-y-pago">Financiación y pago</a></li>
-
+    </ul>
+    <header id="financiamiento-header" class="nav-header">Financiamiento</header>
+    <ul>
+      <li><a class="nav-link" href="./financiacion.html">Financiación y pago</a></li>
+    </ul>
+    <header id="licitaciones-header" class="nav-header">Licitaciones en curso</header>
+    <ul>
       <li>
-        <a class="nav-link" href="#licitaciones">Licitaciones</a>
+        <a class="nav-link" href="./licitaciones.html">Licitaciones</a>
       </li>
+    </ul>
+    <header id="contacto-header" class="nav-header">Contacto</header>
+    <ul>
       <li>
-        <a class="nav-link" href="#contacto">Contacto</a>
+        <a class="nav-link" href="./contacto.html">Contacto</a>
       </li>
+    </ul>
   </nav>
+
+  <!--
+    Main del index. 
+  -->
   <main id="main-doc">
     <section class="main-section" id="com1">
       <header>
         <h2>Comisión de Obras Res. S.E. N.º 1/2003</h2>
       </header>
+      <!--
+        Información sobre la comisión.
+      -->
       <article>
         <p>La Comisión de Obras Resolución S.E. N.º 1/2003, creada por Resolución S.E. N.º 86 del 30 de enero de
           2003,
@@ -101,7 +121,9 @@
           NACIONAL, y
           las tareas de inspección y certificación de los contratos.
         </p>
-
+      <!--
+        Operatoria res1
+      -->
       </article>
     </section>
     <hr>
@@ -177,6 +199,9 @@
       </article>
     </section>
     <hr>
+    <!--
+      Operatoria res8
+    -->
     <section class="main-section" id="operatoria-res821">
       <header>
         <h2>Operatoria Res. N.º 8/2006</h2>
@@ -252,98 +277,6 @@
           cuestión,
           y la situación vigente al momento de su realización.</p>
       </article>
-    </section>
-    <hr>
-    <section class="main-section" id="financiacion-y-pago">
-      <header>
-        <h2>Financiación y pago</h2>
-      </header>
-      <article>
-        <p>
-          La financiación y pago de las obras dependen de su encuadramiento, no obstante que en la casi
-          totalidad
-          de los casos se utilizan los recursos no comprometidos y disponibles en la Cuenta y Subcuentas de
-          Excedentes por Restricciones a la Capacidad de Transporte, denominados Cuentas SALEX, del MERCADO
-          ELECTRICO MAYORISTA (MEM), en la medida que no estén afectados a otros destinos o usos regulatorios
-          predefinidos.
-        </p>
-        <p>
-          Otras fuentes de financiamiento las constituyen aportes vinculados a las demandas específicas que se
-          atienden con las obras, sean estos provenientes de gobiernos provinciales, o a partir de cargos
-          específicos a incluir o incluidos en la tarifa del servicio eléctrico.
-          Con esos recursos se constituye el “FONDO OBRAS RESOLUCION S.E. N.º 1/2003” con que se financia la
-          ejecución de las obras, teniendo cada obra una subcuenta específica.
-          Una vez terminadas las obras, los saldos no pagados como anticipo desde fondos especificos no
-          reembolsables a tales fines, se amortizan en cuotas mensuales, destinadas a restituir los recursos
-          provenientes de las Cuentas SALEX, devengando intereses equivalentes al rendimiento medio anual
-          obtenido
-          por el OED en sus colocaciones financieras, cuyo valor anualizado no puede superar a la tasa anual
-          vencida establecida por el Banco de la Nación Argentina (BNA) para sus operaciones de descuento de
-          documentos a 30 días de plazo.
-        </p>
-        <p>
-          La responsabilidad en el pago de estas cuotas depende del tipo de obra, previéndose las siguientes
-          asignaciones:
-        </p>
-
-        <p>
-          <b>OBRAS DE ADECUACION:</b> Todos los agentes demandantes, incluida la demanda de exportación, en
-          proporción a su participación en el pago de los cargos por Servicios a la Potencia.
-        </p>
-
-        <p>
-          <b>OBRAS DE SEGURIDAD DE ABASTECIMIENTO:</b> SETENTA POR CIENTO (70 %) a los agentes demandantes,
-          incluida
-          la demanda de exportación, en proporción a su participación en el pago de los cargos por Servicios
-          Asociados a la Potencia; y TREINTA POR CIENTO (30 %) a los agentes demandantes definidos como
-          beneficiarios de las obras.
-        </p>
-
-        <p>
-          <b>OBRAS DEFINIDAS POR LA RESOLUCION S.E. N.º 938/2004:</b> Los agentes definidos como beneficiarios
-          de las
-          obras.
-        </p>
-        <p>
-          <b>OBRAS DEFINIDAS POR LA RESOLUCION S.E. N.º 821/2006:</b> SETENTA POR CIENTO (70 %) a los agentes
-          demandantes,
-          incluida la demanda de exportación, en
-          proporción a su participación en el pago de los cargos por Servicios Asociados a la Potencia; y
-          TREINTA POR CIENTO (30 %) a los agentes demandantes definidos como Mariano beneficiarios de las
-          obras a los efectos de restituir el adelanto provisto por la Jurisdicción Provincial.
-        </p>
-      </article>
-    </section>
-    <hr>
-    <section class="main-section" id="licitaciones">
-      <header>
-        <h2>Licitaciones</h2>
-      </header>
-      <article>
-        <p>Lorena ipsum</p>
-      </article>
-    </section>
-    <hr>
-    <section class="main-section" id="contacto">
-      <header>
-        <h2>Contacto</h2>
-      </header>
-      <article>
-        <p>Comisión de Obras Res. N.º 1/2003</p>
-        <p>Fideicomiso Obras Transporte para Abastecimiento Eléctrico (FOTAE)</p>
-        <p>Tel: +54 11 4319-3746</p>
-        <p>
-          Av. Eduardo Madero 942, 16.º, dcha.<br>
-          (C1106ACW) Ciudad Autónoma de Buenos Aires<br>
-          Argentina
-        </p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3029820926163!2d-58.3704812!3d-34.5964993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33535243d9557%3A0xa2903aff993ac8dc!2sAv.%20Eduardo%20Madero%20942%2C%20C1106%20CABA!5e0!3m2!1ses!2sar!4v1656085119722!5m2!1ses!2sar"
-          width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-      </article>
-    </section>
   </main>
 </body>
 
